--- a/public/css/inputbox.css
+++ b/public/css/inputbox.css
@@ -8,7 +8,8 @@
   align-items: center;
   gap: 5px;
   border-radius: 10px;
-  max-width: 300px;
+  width: 400px;
+  max-width: 400px;
   transition: transform 400ms;
   transform-style: preserve-3d;
   border: 1px solid var(--nav2-background-color);
