--- a/public/css/root.css
+++ b/public/css/root.css
@@ -7,6 +7,7 @@
   --blue: #007bff;
   --nav1-background-color: #0943b5;
   --nav2-background-color: #5e5f61;
+  --nav-hover-color: #062a70dc;
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
@@ -19,7 +20,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #007bff;
+  --primary: #052f85;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -37,6 +38,7 @@
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
     'Liberation Mono', 'Courier New', monospace;
+  --font-size: 18px;
 }
 
 *,
